--- a/ms-consulta/Dockerfile
+++ b/ms-consulta/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:21-jdk-alpine
+FROM bellsoft/liberica-openjdk-alpine-musl:17
 VOLUME /tmp
 COPY target/ms-consulta.jar app.jar
 ENTRYPOINT ["java", "-jar", "/app.jar"]
