--- a/ms-auth/src/main/resources/application.yml
+++ b/ms-auth/src/main/resources/application.yml
@@ -1,3 +1,16 @@
+server:
+  port: 8080
 spring:
   application:
     name: ms-auth
+  datasource:
+    url: jdbc:postgresql://db_auth:5432/auth_db
+    username: auth_user
+    password: auth_pass
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
