--- a/ms-consulta/pom.xml
+++ b/ms-consulta/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>ufpr.br.ms-consulta</groupId>
 	<artifactId>ms-consulta</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1</version>
 	<name>ms-consulta</name>
 	<description>Repository for Consultation Module based on Springboot</description>
 	<url/>
