--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,11 +1,8 @@
 FROM node:22-alpine
-
 WORKDIR /usr/src/app
-
-COPY package.json package-lock.json ./
+COPY package*.json ./
 RUN npm install
-
 COPY . .
-
 EXPOSE 8080
-CMD ["npm", "start"]
+CMD ["node", "index.js"]
+
