--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,8 @@ services:
       SPRING_DATASOURCE_PASSWORD: auth_pass
     ports:
       - "8081:8080"
+    env_file:
+      - .env
     networks:
       - hospital_net
 
