Add login component with form validation and authentication service integration

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -27,6 +27,7 @@
               }
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": [],
@@ -97,5 +98,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "20a43117-8938-47f2-8e06-216de578c46c"
   }
 }
