Add dashboard component and related DTOs, services, and routing

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,9 @@
-FROM node:alpine
+FROM node:latest AS build
+WORKDIR /usr/local/app
+COPY ./ /usr/local/app/
+RUN npm install --legacy-peer-deps
+RUN npm run build
+FROM nginx:latest
+COPY --from=build /usr/local/app/dist/frontend/browser /usr/share/nginx/html
+EXPOSE 80
 
-WORKDIR /usr/src/app
-
-COPY . /usr/src/app
-
-RUN npm install -g @angular/cli
-
-RUN npm install
-
-CMD ["ng", "serve", "--host", "0.0.0.0"]
