--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:latest AS build
 WORKDIR /usr/local/app
 COPY ./ /usr/local/app/
-RUN npm install --legacy-peer-deps
+RUN npm install
 RUN npm run build
 FROM nginx:latest
 COPY --from=build /usr/local/app/dist/frontend/browser /usr/share/nginx/html
