--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,9 @@
     "@angular/router": "^20.0.2",
     "@angular/ssr": "^20.0.1",
     "bootstrap": "^5.3.6",
+    "bootstrap-icons": "^1.13.1",
     "express": "^4.18.2",
+    "jwt-decode": "^4.0.0",
     "ngx-mask": "^19.0.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
