- Adiciona middleware de autenticação com verificação de token, paciente e funcionário - Refatora rotas de autenticação e consulta para utilizar os novos middlewares - Atualiza serviços de autenticação e consulta para novas rotas e métodos - Adiciona variáveis de ambiente com dotenv - Atualiza dependências no package.json

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,6 +97,8 @@ services:
       - "8080:8080"
     networks:
       - hospital_net
+    env_file:
+      - .env
 
   frontend:
     build: ./frontend
