- Adiciona máscara para CPF e telefone no componente de funcionário - Atualiza rótulo para exibir saldo de pontos no agendamento de consulta - Melhora o Dockerfile para usar npm ci e otimiza a cópia de arquivos - Cria tabela de funcionários no script de inicialização do banco de dados - Adiciona consulta de exemplo para a tabela de funcionários

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,8 @@
 FROM node:latest AS build
 WORKDIR /usr/local/app
-COPY ./ /usr/local/app/
-RUN npm install
+COPY package.json package-lock.json ./
+RUN npm ci
+COPY . .
 RUN npm run build
 FROM nginx:latest
 COPY --from=build /usr/local/app/dist/frontend/browser /usr/share/nginx/html
